# ivenza-keycloak-test-pipelines

./: .gitignore  README.md
.github/workflows/: publish_keycloak_to_acr.yaml  publish_migration_tool_to_acr.yaml  publish_to_acr.yaml
config/: delihome-realm.json
docker/: .env  Dockerfile  README.md  acr-login.sh  docker-compose.yml
ivenza_auth_migrator/: .dockerignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  permission-mapping-example.txt  run-migrator.sh  test-sets-output.md
ivenza_auth_migrator/src/: main.rs  schema.rs
ivenza_auth_migrator/src/data/: mod.rs
ivenza_auth_migrator/src/models/: ivenza.rs  keycloak.rs  mod.rs
ivenza_auth_migrator/src/services/: import_validator.rs  ivenza_client.rs  keycloak_client.rs  mod.rs  oidc_client.rs  permission_syncer.rs  policy_syncer.rs  resource_syncer.rs  role_syncer.rs  scope_syncer.rs  user_syncer.rs  utility.rs
themes/ivenza/common/resources/: package-lock.json
themes/ivenza/email/: theme.properties
themes/ivenza/email/components/: footer.ftl  header.ftl  logo.ftl
themes/ivenza/email/html/: email-test.ftl  executeActions.ftl  template.ftl
themes/ivenza/email/mesages/: messages_en.properties  messages_nl.properties
themes/ivenza/email/messages/: messages_de.properties  messages_en.properties  messages_fr.properties  messages_nl.properties
themes/ivenza/login/: theme.properties
themes/skantrae/: tailwind.config.js
themes/skantrae/login/: error.ftl  info.ftl  login-reset-password.ftl  login-update-password.ftl  login.ftl  skantrae-template.ftl  template.ftl  theme.properties
(+29 files in other folders)
