[package]
name = "ivenza_auth_migrator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.7.3", features = ["mysql", "runtime-tokio", "tls-rustls"] }
dotenv = "0.15"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"
uuid = { version = "1.3.4", features = ["v4", "serde"] }
regex = "1.8.4"
urlencoding = "2.1.2"
